# schess

./: .gitignore  README.md  _config.yml  chess_class.js  index.html  main.js  package-lock.json  package.json  schess.js  script.js  style.css  test-PERFT.js  test.js  test.py
.github/workflows/: node.js.yml
rust-chess/: Cargo.toml  README.md  rustfmt.toml
rust-chess/pkg/: package.json  rust_chess.d.ts  rust_chess.js  rust_chess_bg.wasm  rust_chess_bg.wasm.d.ts
rust-chess/src/: ai_main.rs  ai_mtdf.rs  ai_transposition.rs  ai_vanilla.rs  constants.rs  evaluation.rs  lib.rs
scripts/: ai.js  chess_class.js  game.js  game_old.js  schess.js  worker.js
tests/: test-EXPERIMENTAL.js  test-PERFT.js
