[package]
name = "rust-chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debuf = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.81"
chess = "3.2.0"

console_error_panic_hook = { version = "0.1.1", optional = true }

[patch.crates-io]
chess = {path="./chess-3.2.0"}